--- a/denso_gazebo/config/controllers.yaml
+++ b/denso_gazebo/config/controllers.yaml
@@ -3,6 +3,16 @@ joint_state_controller:
   publish_rate: 125
   type: joint_state_controller/JointStateController
 
+# Gripper controller
+gripper_controller:
+  type: position_controllers/GripperActionController
+  joint: robotiq_85_left_knuckle_joint
+  action_monitor_rate: 20
+  goal_tolerance: 0.002
+  max_effort: 100
+  stall_velocity_threshold: 0.001
+  stall_timeout: 1.0
+
 # Trajectory controller
 trajectory_controller:
   type: "position_controllers/JointTrajectoryController"
