--- a/denso_gazebo/package.xml
+++ b/denso_gazebo/package.xml
@@ -15,6 +15,7 @@
   <build_depend>effort_controllers</build_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>gazebo_ros_control</build_depend>
+  <build_depend>gripper_action_controller</build_depend>
   <build_depend>joint_state_controller</build_depend>
   <build_depend>joint_trajectory_controller</build_depend>
   <build_depend>robot_state_publisher</build_depend>
@@ -23,6 +24,7 @@
   <run_depend>effort_controllers</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>gazebo_ros_control</run_depend>
+  <run_depend>gripper_action_controller</run_depend>
   <run_depend>joint_state_controller</run_depend>
   <run_depend>joint_trajectory_controller</run_depend>
   <run_depend>robot_state_publisher</run_depend>
